--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Library</string>
+    <string name="back">返回</string>
+    <string name="title">标题</string>
+    <string name="go">前进</string>
+    <string name="empty_str">""</string>
 </resources>
